# XCVario

./: .cproject  .gitignore  .project  CMakeLists.txt  CONTRIBUTING.md  ESPAudio.cpp  ESPAudio.h  Makefile  README.md  README.txt  SetupMenu.cpp  SetupNG.cpp  analyze_core  eclipse_C++.xml  fflash  flash  flash-erase  flashUSB1  gdbinit  generated_date.txt  index.html  partitions.csv  release.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig_ref.txt
components/arduino-esp32/: .CMakeLists.txt.swp  .autotools  CMakeLists.txt
components/arduino-esp32/cores/esp32/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  IPAddress.h  MD5Builder.h  esp32-hal-cpu.c  esp32-hal-gpio.c  esp32-hal-matrix.c  esp32-hal-matrix.h  esp32-hal-spi.c  esp32-hal-touch.c  esp32-hal-uart.c  esp32-hal-uart.h
components/arduino-esp32/variants/esp32/: pins_arduino.h
components/btstack/: CMakeLists.txt  btstack_stdin_esp32.c  btstack_tlv_esp32.c  component.mk  main.c  sdkconfig
components/btstack/platform/freertos/: btstack_run_loop_freertos.c
components/btstack/src/: btstack_config.h  btstack_memory.h
components/btstack/src/ble/: att_server.h
components/btstack/src/classic/: avrcp.h  hfp.c  hfp_gsm_model.c  rfcomm.c
components/eglib/: .autotools  .gitignore  CMakeLists.txt  LICENSE.md  Makefile.am  README.md  TODO  autogen.sh  configure.ac  eglib.c  eglib.h  generate_fonts.sh  libopencm3.mk
components/eglib/docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
components/eglib/docs/api_reference/: eglib.html  index.html
components/eglib/docs/driver_development/: display.html  hal.html  index.html
components/eglib/eglib/: config.h  config.h.in~  display.c  display.h  drawing.c  drawing.h  hal.c  hal.h  types.h
components/eglib/eglib/display/: frame_buffer.c  frame_buffer.h  ili9341.c  ili9341.h  sh1106.c  sh1106.h  ssd1331.c  ssd1331.h  ssd1675a.c  ssd1675a.h  st7789.c  st7789.h  tga.c  tga.h
components/eglib/eglib/drawing/: .gitignore  fonts.h
components/eglib/examples/: local.mk
components/eglib/examples/libopencm3_stm32f4/: .gitignore  Makefile.am  config.h.in~  configure.ac  gdb.init  sh1106-i2c.c  (+5 more)
components/eglib/font_generator/: .gitignore  Makefile.am  configure.ac  font_generator.c
components/eglib/fonts/: local.mk
components/eglib/sphinx/: .gitignore  conf.py  index.rst  local.mk  requirements.txt
components/eglib/tests/: common.c  common.h  local.mk
main/: .autotools  .cproject  .project  ABPMRR.cpp  ABPMRR.h  AdaptUGC.cpp  AdaptUGC.h  AirspeedSensor.h  AnalogInput.cpp  AnalogInput.h  Anemoi.cpp  Anemoi.h  Atmosphere.cpp  Atmosphere.h  AverageVario.cpp  AverageVario.h  BLESender.cpp  BLESender.h  BME280_ESP32_SPI.cpp  BME280_ESP32_SPI.h  BMPVario.cpp  BMPVario.h  BTSender.cpp  BTSender.h  BatVoltage.cpp  BatVoltage.h  Blackboard.cpp  Blackboard.h  CMakeLists.txt  CanBus.h  CenterAid.cpp  CenterAid.h  Cipher.cpp  Cipher.h  CircleWind.cpp  CircleWind.h  Colors.h  Compass.cpp  Compass.h  CompassMenu.cpp  (+187 more)
main/comm/: BTspp.cpp  CanBus.cpp  CanBus.h  CircularCharBuffer.cpp  CircularCharBuffer.h  Configuration.h  DataLink.cpp  DataLink.h  DeviceMgr.cpp  DeviceMgr.h  Devices.h  I2CWrapper.cpp  I2CWrapper.h  InterfaceCtrl.cpp  InterfaceCtrl.h  Messages.cpp  Messages.h  Mutex.h  Routing.cpp  Routing.h  RoutingTargets.h  SerialLine.cpp  SerialLine.h  WifiAP.cpp  WifiAP.h  WifiApSta.cpp  WifiApSta.h
main/glider/: PolarTable.txt  Polars.cpp  Polars.h  polar_check.py
main/math/: CompareFloat.cpp  CompareFloat.h  GaugeTrig.cpp  GaugeTrig.h  Quaternion.cpp  Quaternion.h  Trigenometry.cpp  Trigenometry.h
main/protocol/: ATR833Remote.cpp  ATR833Remote.h  AliveMonitor.cpp  AliveMonitor.h  Anemoi.cpp  Anemoi.h  CANMasterReg.cpp  CANMasterReg.h  Clock.cpp  Clock.h  ClockIntf.h  FlarmBin.cpp  FlarmBin.h  FlarmGPS.cpp  FlarmGPS.h  FlarmHost.cpp  FlarmHost.h  FlarmSim.cpp  FlarmSim.h  JumboCmdHost.cpp  JumboCmdHost.h  KRT2Remote.cpp  KRT2Remote.h  MagSensBin.cpp  MagSensBin.h  MagSensHost.cpp  MagSensHost.h  NMEA.cpp  NMEA.h  ProtocolItf.cpp  ProtocolItf.h  TestQuery.cpp  TestQuery.h  WatchDog.cpp  WatchDog.h  WatchDogIntf.h  nmea_util.cpp  nmea_util.h
main/protocol/nmea/: BorgeltMsg.cpp  BorgeltMsg.h  CANClientQueryMsg.cpp  CANClientQueryMsg.h  CANMasterRegMsg.cpp  CANMasterRegMsg.h  CambridgeMsg.cpp  CambridgeMsg.h  FlarmHostMsg.cpp  FlarmHostMsg.h  FlarmMsg.cpp  FlarmMsg.h  GarminMsg.cpp  GarminMsg.h  GpsMsg.cpp  GpsMsg.h  JumboCmdMsg.cpp  JumboCmdMsg.h  MagSensMsg.cpp  MagSensMsg.h  OpenVarioMsg.cpp  OpenVarioMsg.h  XCNavMsg.cpp  XCNavMsg.h  XCVSyncMsg.cpp  XCVSyncMsg.h  XCVarioMsg.cpp  XCVarioMsg.h
main/protocols/: Anemoi.cpp  ProtocolItf.h
main/screen/: BootUpScreen.cpp  BootUpScreen.h  DrawDisplay.cpp  DrawDisplay.h  MessageBox.cpp  MessageBox.h  SetupRoot.cpp  SetupRoot.h  UiEvents.h
main/screen/element/: Altimeter.cpp  Altimeter.h  ArrowIndicator.cpp  ArrowIndicator.h  Battery.cpp  Battery.h  CruiseStatus.cpp  CruiseStatus.h  FlapsBox.cpp  FlapsBox.h  LargeFigure.cpp  LargeFigure.h  McCready.cpp  McCready.h  PolarGauge.cpp  PolarGauge.h  S2FBar.cpp  S2FBar.h  ScreenElement.cpp  ScreenElement.h  WindCircle.cpp  WindCircle.h  WindIndicator.cpp  WindIndicator.h
main/setup/: CruiseMode.cpp  CruiseMode.h  DataMonitor.cpp  DataMonitor.h  DisplayDeviations.cpp  DisplayDeviations.h  MenuEntry.cpp  MenuEntry.h  SetupAction.cpp  SetupAction.h  SetupCommon.cpp  SetupCommon.h  SetupMenu.cpp  SetupMenu.h  SetupMenuChar.cpp  SetupMenuChar.h  SetupMenuCommon.h  SetupMenuDisplay.cpp  SetupMenuDisplay.h  SetupMenuSelect.cpp  SetupMenuSelect.h  SetupMenuValFloat.cpp  SetupMenuValFloat.h  SetupNG.cpp  SetupNG.h  SetupRoot.cpp  SetupRoot.h  ShowBootMsg.cpp  ShowBootMsg.h  ShowCirclingWind.cpp  ShowCompassSettings.cpp  ShowCompassSettings.h  ShowStraightWind.cpp  ShowStraightWind.h  SubMenuAudio.cpp  SubMenuAudio.h  SubMenuCompassWind.cpp  SubMenuCompassWind.h  SubMenuDevices.cpp  SubMenuDevices.h  (+4 more)
main/wind/: CircleWind.cpp  CircleWind.h  StraightWind.cpp  StraightWind.h  WindCalcTask.cpp  WindCalcTask.h
main/wmm/: geomag.cpp  geomag.h  wmm_2020.h
(+413 files in other folders)
