idf_component_register(SRC_DIRS "." "eglib" "eglib/display" "eglib/drawing" "eglib/drawing/fonts" "eglib/drawing/fonts/adobe" "eglib/drawing/fonts/freefont" "eglib/drawing/fonts/liberation" "eglib/hal/four_wire_spi/esp32"
                       INCLUDE_DIRS "." "eglib" "eglib/display" "eglib/drawing" "eglib/drawing/fonts" "eglib/drawing/fonts/adobe" "eglib/drawing/fonts/freefont" "eglib/drawing/fonts/liberation" "eglib/hal/four_wire_spi/esp32"
                       REQUIRES arduino-esp32
)
